RM-1482 (No message is shown when user tries to file Audit Log as Record to File Pan or closed folder)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@68492 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/audit/audit.get.properties
@@ -55,3 +55,6 @@ label.no-previous=<none>
 
 node.root=File Plan
 title.single=Select location of Audit Record
+
+label.select.recordfolder.title=Select record folder
+label.select.recordfolder.text=Please select a record folder
