--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get.properties
@@ -1,20 +1,20 @@
 ## Title
 header.savedsearch=Saved Searches
 
-rm.savedsearch.vitalRecordsName=Vital Records Due For Review
-rm.savedsearch.vitalRecordsDesc=All records currently due for review.
+rm.savedsearch.vitalRecordsName=Vital Records And Record Folders Due For Review
+rm.savedsearch.vitalRecordsDesc=All records and record folders currently due for review.
 
 rm.savedsearch.incompleteRecordsName=Incomplete Records
 rm.savedsearch.incompleteRecordsDesc=All incomplete records.
 
-rm.savedsearch.cutoffRecordsName=Records Eligible For Cutoff
-rm.savedsearch.cutoffRecordsDesc=All records currently eligible for cutoff.
+rm.savedsearch.cutoffRecordsName=Records And Record Folders Eligible For Cutoff
+rm.savedsearch.cutoffRecordsDesc=All records and record folders currently eligible for cutoff.
 
-rm.savedsearch.transferRecordsName=Records Eligible For Transfer
-rm.savedsearch.transferRecordsDesc=All records currently eligible for transfer.
+rm.savedsearch.transferRecordsName=Records And Record Folders Eligible For Transfer
+rm.savedsearch.transferRecordsDesc=All records and record folders currently eligible for transfer.
 
-rm.savedsearch.destructionRecordsName=Records Eligible For Destruction
-rm.savedsearch.destructionRecordsDesc=All records currently eligible for destruction.
+rm.savedsearch.destructionRecordsName=Records And Record Folders Eligible For Destruction
+rm.savedsearch.destructionRecordsDesc=All records and record folders currently eligible for destruction.
 
 rm.savedsearch.frozenRecordsName=Records and Record Folders On Hold
 rm.savedsearch.frozenRecordsDesc=All records and record folders on hold.
