--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get.properties
@@ -1,8 +1,8 @@
 ## Title
 header.savedsearch=Saved Searches
 
-rm.savedsearch.vitalRecordsName=Vital Records And Record Folders Due For Review
-rm.savedsearch.vitalRecordsDesc=All records and record folders currently due for review.
+rm.savedsearch.vitalRecordsName=Vital Records Due For Review
+rm.savedsearch.vitalRecordsDesc=All records currently due for review.
 
 rm.savedsearch.incompleteRecordsName=Incomplete Records
 rm.savedsearch.incompleteRecordsDesc=All incomplete records.
