RM-1346: "Cut off" and "Cutoff"
 * Standardised on "Cut Off"



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@69615 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -97,7 +97,7 @@ actions.more=More...
 actions.accession=Accession
 actions.close-folder=Close Folder
 actions.copy-to=Copy to...
-actions.cutoff=Cutoff
+actions.cutoff=Cut Off
 actions.declare=Complete Record
 actions.delete=Delete
 actions.destroy=Destroy
@@ -122,7 +122,7 @@ actions.split-email=Split Email Attachments
 actions.transfer=Transfer
 actions.transfer-complete=Complete Transfer
 actions.undeclare=Reopen Record
-actions.undo-cutoff=Undo Cutoff
+actions.undo-cutoff=Undo Cut Off
 actions.create-disposition-schedule=Create Disposition Schedule
 actions.upload-new-version=Upload New Version
 actions.view-details=View Details
@@ -147,8 +147,8 @@ message.accession-complete.failure=Couldn't complete accession ''{0}''
 message.accession-complete.success=''{0}'' accession completed
 message.close.failure=Couldn't close ''{0}''
 message.close.success=''{0}'' successfully closed
-message.cutoff.failure=Couldn't cutoff ''{0}''
-message.cutoff.success=''{0}'' successfully cutoff
+message.cutoff.failure=Couldn't cut off ''{0}''
+message.cutoff.success=''{0}'' successfully cut off
 message.declare.failure=Couldn't complete ''{0}'' record
 message.declare.failure.more=The record has metadata that needs to be completed.
 message.declare.success=''{0}'' was completed
@@ -182,8 +182,8 @@ message.transfer-complete.failure=Couldn't complete transfer ''{0}''
 message.transfer-complete.success=''{0}'' transfer has been completed
 message.undeclare.failure=Couldn't reopen ''{0}''
 message.undeclare.success=''{0}'' is no longer a complete record
-message.undo-cutoff.failure=Couldn't undo cutoff for ''{0}''
-message.undo-cutoff.success=Undo cutoff on ''{0}''
+message.undo-cutoff.failure=Couldn't undo cut off for ''{0}''
+message.undo-cutoff.success=Undo cut off on ''{0}''
 message.create-disposition-schedule.failure=Couldn't create disposition schedule for ''{0}''
 message.create-disposition-schedule.success=Disposition schedule for ''{0}'' created
 message.create-record.success=Successfully declared as record
@@ -207,8 +207,8 @@ message.file-hold-report.success=Hold report generated
 status.rm-accession=Accession Pending
 status.rm-accessioned=Accessioned
 status.rm-closed=Closed
-status.rm-cutoff=Cutoff
-status.rm-cutoff-folder=Cutoff
+status.rm-cutoff=Cut Off
+status.rm-cutoff-folder=Cut Off
 status.rm-destroyed=Destroyed
 status.rm-frozen=On Hold
 status.rm-multi-parent=Linked in Multiple Record Folders
