--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
@@ -42,7 +42,7 @@ menu.selected-items.deselect-all=Deselect All
 menu.selected-items.accession=Accession
 menu.selected-items.accession-complete=Accession Confirmation
 menu.selected-items.copy-to=Copy to...
-menu.selected-items.cutoff=Cutoff
+menu.selected-items.cutoff=Cut Off
 menu.selected-items.delete=Delete
 menu.selected-items.destroy=Destroy
 menu.selected-items.export=Export
@@ -52,7 +52,7 @@ menu.selected-items.move-to=Move to...
 menu.selected-items.reviewed=Reviewed
 menu.selected-items.transfer=Transfer
 menu.selected-items.transfer-complete=Transfer Confirmation
-menu.selected-items.undo-cutoff=Undo Cutoff
+menu.selected-items.undo-cutoff=Undo Cut Off
 
 ## Pop-up Messages
 message.file.type=Are you filing an Electronic or Non-electronic Record?
