--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get.properties
@@ -7,8 +7,8 @@ rm.savedsearch.vitalRecordsDesc=All records currently due for review.
 rm.savedsearch.incompleteRecordsName=Incomplete Records
 rm.savedsearch.incompleteRecordsDesc=All incomplete records.
 
-rm.savedsearch.cutoffRecordsName=Records And Record Folders Eligible For Cutoff
-rm.savedsearch.cutoffRecordsDesc=All records and record folders currently eligible for cutoff.
+rm.savedsearch.cutoffRecordsName=Records And Record Folders Eligible For Cut Off
+rm.savedsearch.cutoffRecordsDesc=All records and record folders currently eligible for cut off.
 
 rm.savedsearch.transferRecordsName=Records And Record Folders Eligible For Transfer
 rm.savedsearch.transferRecordsDesc=All records and record folders currently eligible for transfer.
