Fixed RM 2.1 to get it working with Alfresco 4.2.2
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.1@71381 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ alfrescoEnterpriseMavenPwd=
 
 # set to org.alfresco.enterprise when enterprise version required
 alfrescoGroupId=org.alfresco
-alfrescoBaseVersion=4.2.0
+alfrescoBaseVersion=4.2.2-SNAPSHOT
 
 # indicates whether this is a local build or not
 localBuild=true
