RM-1509 ("Critera" wrong spelling on Records Search)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@71445 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
@@ -14,7 +14,7 @@ message.deletesearch.failure=Search couldn't be deleted.
 
 label.searchtitle=Search
 label.searchterm=Query Text
-label.criteria=Critera
+label.criteria=Criteria
 label.results=Results
 label.insertfield=Insert Field
 label.select=Select...
