Changed label according to the comment from documentation team
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@71470 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
@@ -32,7 +32,7 @@ button.newsearch=New Search
 button.savesearch=Save Search...
 button.savedsearches=Saved Searches
 button.deletesearch=Delete Search
-button.print=Printer Layout
+button.print=Print Layout
 button.screen=Screen Layout
 button.export=Export
 button.add-to-hold=Add to Hold
