RM-1429 (The user with read-only permissions on the item can unfreeze it via deleting hold)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@72277 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -85,6 +85,8 @@ message.pdf-record-fonts.transfer=Check that any PDF records just transferred in
 message.pdf-record-fonts.unknown=If the transfer or accession included PDF records, you should check the applicable embedded fonts have been included.
 message.request-info-success=Information requested successfully
 message.request-info-failure=An error occurred whilst requesting information
+message.confirm.delete-hold.title=Delete Hold
+message.confirm.delete-hold=Are you sure you want to delete ''{0}''?
 
 ## Admin Console
 message.admin-console-access-denied=You need additional permissions to access this page.
@@ -202,6 +204,8 @@ message.file-success=Successfully filed report as ''{0}''
 message.file-failure=The file operation could not be completed
 message.file-hold-report.failure=Couldn't generate hold report
 message.file-hold-report.success=Hold report generated
+message.delete-hold.failure=Couldn't delete hold
+message.delete-hold.success=Hold deleted
 
 ## File Plan Status Indicators
 status.rm-accession=Accession Pending
