Changed property according the feedback from localation manager
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73467 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -455,4 +455,4 @@ file-to.substitution.date.month.number.label=Month Number (e.g. 01)
 file-to.substitution.date.year.short.label=Short Year (e.g. 14)
 file-to.substitution.date.year.label=Year (e.g. 14)
 file-to.substitution.date.year.long.label=Long Year (e.g. 2014)
-file-to.substitution.date.year.week.label=Year Week (e.g. 31)
+file-to.substitution.date.year.week.label=Week of Year (e.g. 31)
