RM-1070, added rule property substitution for day of month
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73716 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -448,6 +448,7 @@ file-to.substitution.date.day.label=Day (e.g. Mon)
 file-to.substitution.date.day.long.label=Long Day (e.g. Monday)
 file-to.substitution.date.day.number.label=Day Number (e.g. 1)
 file-to.substitution.date.day.year.label=Day of Year (e.g. 216)
+file-to.substitution.date.day.month.label=Day of Month (e.g. 18)
 file-to.substitution.date.month.short.label=Short Month (e.g. Jan)
 file-to.substitution.date.month.label=Month (e.g. Jan)
 file-to.substitution.date.month.long.label=Long Month (e.g. January)
