RM-1545, changed help text for substitution properties on manage rules page
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73793 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
@@ -22,19 +22,12 @@ form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 Hour)
 
 record.folder.path.title=Click to show help text for the record folder path field.
-record.folder.path.help=<p>The following substitutions are allowed:</p>\
-   <p></p>\
-   <p>date.day.short = Sun</p>\
-   <p>date.day = Sun</p>\
-   <p>date.day.long = Sunday</p>\
-   <p>date.day.number = 7 (1-7)</p>\
-   <p>date.day.year = 216 (001-365)</p>\
-   <p>date.month.short = Aug</p>\
-   <p>date.month = Aug</p>\
-   <p>date.month.long = August</p>\
-   <p>date.month.number = 08 (01-12)</p>\
-   <p>date.year.short = 13</p>\
-   <p>date.year = 13</p>\
-   <p>date.year.long = 2013</p>\
-   <p>date.year.week = 31 (01-52)</p>\
-   <p>node.cm:title = <title value of the node></p>\
+record.folder.path.help=<p>Type part of a record property to display autocomplete options. For example, if you type rm options include:</p>\
+	<ul><li>- Date filed {node.rma:dateFiled}</li>\
+	<li>- Location {node.rma:location}</li></ul>\
+	<p>Records will be put into the File Plan based on each individual record property value.</p>\
+	<p>Only 6 options are offered at a time.</p>\
+	<p>Date options set that part of the path to the date the rule is run. For example if it's run on Monday then:</p>\
+	<ul><li>- Short Day {date.day.short} = Mon</li>\
+	<li>- Long Day {date.day.long} = Monday</li></ul>\
+	<p>See the Records Management Help for all autocomplete options.</p>\
