git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@73935 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get.properties
@@ -35,7 +35,7 @@ label.button-view-log=View Full Log
 label.button-specify=Specify
 label.button-export=Export
 label.button-file-record=File as Record
-label.button-apply=Apply
+label.button-apply=Run Audit Report
 label.button-details=Details
 
 label.filed-log-message=Audit log has been filed as a record.
@@ -63,7 +63,7 @@ label.header-entries=Number of entries
 label.header-from=From
 label.header-to=To
 label.header-event=Event
-label.header-property=Property
+label.header-property=Metadata
 
 label.dialog-title=Details of {0} event
 label.property=Property
