Corrected mistake in text for label.datatype.boolean
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@74267 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get.properties
@@ -10,7 +10,7 @@ label.mandatory=Mandatory
 
 label.datatype.unknown=Unknown
 label.datatype.text=Text
-label.datatype.boolean=Text Box
+label.datatype.boolean=Check Box
 label.datatype.date=Date
 
 message.getpropertiesfail=Couldn't retrieve custom property definitions.
