--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
@@ -22,12 +22,13 @@ form.control.date-picker.entry.time.format=HH:mm
 form.control.date-picker.display.time.format=HH:MM (24 Hour)
 
 record.folder.path.title=Click to show help text for the record folder path field.
-record.folder.path.help=<p>Type part of a record property to display autocomplete options. For example, if you type rm options include:</p>\
+record.folder.path.help=<p>Type part of a record property to display autocomplete options. For example, if you type rm options, include:</p>\
 	<ul><li>- Date filed {node.rma:dateFiled}</li>\
 	<li>- Location {node.rma:location}</li></ul>\
 	<p>Records will be put into the File Plan based on each individual record property value.</p>\
 	<p>Only 6 options are offered at a time.</p>\
-	<p>Date options set that part of the path to the date the rule is run. For example if it's run on Monday then:</p>\
+	<p>Date options set that part of the path to the date the rule is run. For example, if it's run on Monday then:</p>\
 	<ul><li>- Short Day {date.day.short} = Mon</li>\
 	<li>- Long Day {date.day.long} = Monday</li></ul>\
 	<p>See the Records Management Help for all autocomplete options.</p>\
+	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Click here for all autocomplete options.</a></p>\
