Changed final name for the artifacts
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@78326 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
    </properties>
 
    <build>
-      <finalName>${project.artifactId}-${project.version}-b${buildNumber}-${buildKey}</finalName>
+      <finalName>${project.artifactId}-${project.version}${buildNumber}${buildKey}</finalName>
       <plugins>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
