--- a/rm-share/config/alfresco/module/org_alfresco_module_rm_share/module.properties
+++ b/rm-share/config/alfresco/module/org_alfresco_module_rm_share/module.properties
@@ -6,6 +6,6 @@ module.aliases=org_alfresco_module_dod5015_share
 
 module.title=Alfresco Record Management Share Extension
 module.description=Alfresco Record Management Share Extension
-module.version=2.3
+module.version=2.3.a
 
-module.repo.version.min=4.2
+module.repo.version.min=5.0.a
