--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -23,72 +23,79 @@
             <directory>source/web</directory>
          </resource>
       </resources>
-      <plugins>
-         <plugin>
-            <groupId>org.alfresco.maven.plugin</groupId>
-            <artifactId>alfresco-maven-plugin</artifactId>
-            <executions>
-               <execution>
-                  <goals>
-                     <goal>amp</goal>
-                  </goals>
-               </execution>
-            </executions>
-         </plugin>
-         <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <executions>
-               <execution>
-                  <phase>prepare-package</phase>
-                  <goals>
-                     <goal>run</goal>
-                  </goals>
-                  <configuration>
-                     <tasks>
-                        <move todir="${project.build.directory}/${project.build.finalName}/config/alfresco">
-                           <fileset dir="${project.build.outputDirectory}/alfresco"/>
-                        </move>
-                        <move todir="${project.build.directory}/${project.build.finalName}/web/components">
-                           <fileset dir="${project.build.outputDirectory}/components"/>
-                        </move>
-                        <move todir="${project.build.directory}/${project.build.finalName}/web/rm">
-                           <fileset dir="${project.build.outputDirectory}/rm"/>
-                        </move>
-                        <move file="${project.build.directory}/${project.build.finalName}/config/alfresco/module/org_alfresco_module_rm_share/file-mapping.properties"
-                              todir="${project.build.directory}/${project.build.finalName}"/>
-                        <move file="${project.build.directory}/${project.build.finalName}/config/alfresco/module/org_alfresco_module_rm_share/module.properties"
-                              todir="${project.build.directory}/${project.build.finalName}"/>
-                     </tasks>
-                  </configuration>
-               </execution>
-            </executions>
-         </plugin>
-         <plugin>
-            <groupId>net.alchim31.maven</groupId>
-            <artifactId>yuicompressor-maven-plugin</artifactId>
-            <executions>
-               <execution>
-                  <id>minimize-slingshot-javascript</id>
-                  <goals>
-                     <goal>jslint</goal>
-                     <goal>compress</goal>
-                  </goals>
-                  <phase>prepare-package</phase>
-               </execution>
-            </executions>
-            <configuration>
-               <jswarn>false</jswarn>
-               <encoding>UTF-8</encoding>
-               <includes>
-                  <include>**/*.js</include>
-               </includes>
-               <sourceDirectory>${project.build.directory}/${project.build.finalName}/web</sourceDirectory>
-               <outputDirectory>${project.build.directory}/${project.build.finalName}/web</outputDirectory>
-               <excludeResources>true</excludeResources>
-            </configuration>
-         </plugin>
-      </plugins>
    </build>
+   <profiles>
+      <profile>
+         <id>fullBuild</id>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.alfresco.maven.plugin</groupId>
+                  <artifactId>alfresco-maven-plugin</artifactId>
+                  <executions>
+                     <execution>
+                        <goals>
+                           <goal>amp</goal>
+                        </goals>
+                     </execution>
+                  </executions>
+               </plugin>
+               <plugin>
+                  <artifactId>maven-antrun-plugin</artifactId>
+                  <executions>
+                     <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                           <goal>run</goal>
+                        </goals>
+                        <configuration>
+                           <tasks>
+                              <move todir="${project.build.directory}/${project.build.finalName}/config/alfresco">
+                                 <fileset dir="${project.build.outputDirectory}/alfresco"/>
+                              </move>
+                              <move todir="${project.build.directory}/${project.build.finalName}/web/components">
+                                 <fileset dir="${project.build.outputDirectory}/components"/>
+                              </move>
+                              <move todir="${project.build.directory}/${project.build.finalName}/web/rm">
+                                 <fileset dir="${project.build.outputDirectory}/rm"/>
+                              </move>
+                              <move file="${project.build.directory}/${project.build.finalName}/config/alfresco/module/org_alfresco_module_rm_share/file-mapping.properties"
+                                 todir="${project.build.directory}/${project.build.finalName}"/>
+                              <move file="${project.build.directory}/${project.build.finalName}/config/alfresco/module/org_alfresco_module_rm_share/module.properties"
+                                 todir="${project.build.directory}/${project.build.finalName}"/>
+                           </tasks>
+                        </configuration>
+                     </execution>
+                  </executions>
+               </plugin>
+               <plugin>
+                  <groupId>net.alchim31.maven</groupId>
+                  <artifactId>yuicompressor-maven-plugin</artifactId>
+                  <executions>
+                     <execution>
+                        <id>minimize-slingshot-javascript</id>
+                        <goals>
+                           <goal>jslint</goal>
+                           <goal>compress</goal>
+                        </goals>
+                        <phase>prepare-package</phase>
+                     </execution>
+                  </executions>
+                  <configuration>
+                     <jswarn>false</jswarn>
+                     <encoding>UTF-8</encoding>
+                     <includes>
+                        <include>**/*.js</include>
+                     </includes>
+                     <sourceDirectory>${project.build.directory}/${project.build.finalName}/web</sourceDirectory>
+                     <outputDirectory>${project.build.directory}/${project.build.finalName}/web</outputDirectory>
+                     <excludeResources>true</excludeResources>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+   </profiles>
    <dependencies>
       <dependency>
          <groupId>org.alfresco</groupId>
