RM-1610 (ALL LANG: "Path to Record Folder" and "Create Record Path" is not translated to any language)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.2@78843 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get.properties
@@ -32,3 +32,6 @@ record.folder.path.help=<p>Type part of a record property to display autocomplet
 	<li>- Long Day {date.day.long} = Monday</li></ul>\
 	<p>See the Records Management Help for all autocomplete options.</p>\
 	<p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Click here for all autocomplete options.</a></p>\
+
+fileTo.path.label=Path to Record Folder
+fileTo.createRecordPath.label=Create Record Path
