RM-1623 (Move In-Place Record)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@79188 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -139,6 +139,7 @@ actions.delete.hold=Delete Hold
 actions.add-to-hold=Add to Hold
 actions.remove-from-hold=Remove from Hold
 actions.file-hold-report=Generate Hold Report
+actions.move-dm-record=Move Record
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
@@ -203,6 +204,8 @@ message.file-hold-report.failure=Couldn't generate hold report
 message.file-hold-report.success=Hold report generated
 message.delete-hold.failure=Couldn't delete hold
 message.delete-hold.success=Hold deleted
+message.moveDmRecord.failure=Couldn't move record
+message.moveDmRecord.success=Record moved successfully
 
 ## File Plan Status Indicators
 status.rm-accession=Accession Pending
