--- a/rm-ui-tests/pom.xml
+++ b/rm-ui-tests/pom.xml
@@ -3,12 +3,12 @@
    <parent>
       <groupId>org.alfresco</groupId>
       <artifactId>alfresco-rm-parent</artifactId>
-      <version>2.2-SNAPSHOT</version>
+      <version>2.3-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>alfresco-rm-ui-tests</artifactId>
    <properties>
-      <dependency.share.po.version>4.2.2-SNAPSHOT</dependency.share.po.version>
+      <dependency.share.po.version>5.0-BF-SNAPSHOT</dependency.share.po.version>
    </properties>
    <build>
       <plugins>
@@ -67,12 +67,6 @@
          <artifactId>reportng</artifactId>
          <version>1.1.4</version>
          <scope>test</scope>
-         <exclusions>
-            <exclusion>
-               <groupId>org.testng</groupId>
-               <artifactId>testng</artifactId>
-            </exclusion>
-         </exclusions>
       </dependency>
       <dependency>
          <groupId>com.google.inject</groupId>
