--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -188,8 +188,8 @@ message.create-disposition-schedule.failure=Couldn't create disposition schedule
 message.create-disposition-schedule.success=Disposition schedule for ''{0}'' created
 message.create-record.success=Successfully declared as record
 message.create-record.failure=Couldn't declare as record
-message.hide-record.success=Record hidden
-message.hide-record.failure=Couldn't hide record
+message.hide-record.success=Record ''{0}'' successfully hidden
+message.hide-record.failure=Couldn't hide record ''{0}''
 message.reject.reason=Reason:
 message.reject.title=Reason for Rejection
 message.reject.failure=Couldn't reject ''{0}''
@@ -204,8 +204,8 @@ message.file-hold-report.failure=Couldn't generate hold report
 message.file-hold-report.success=Hold report generated
 message.delete-hold.failure=Couldn't delete hold
 message.delete-hold.success=Hold deleted
-message.moveDmRecord.failure=Couldn't move record
-message.moveDmRecord.success=Record moved successfully
+message.moveDmRecord.failure=Couldn't move record ''{0}''
+message.moveDmRecord.success=Record ''{0}'' successfully moved
 
 ## File Plan Status Indicators
 status.rm-accession=Accession Pending
