stabilize the tests
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@80962 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-ui-tests/pom.xml
+++ b/rm-ui-tests/pom.xml
@@ -26,7 +26,7 @@
                   </property>
                </properties>
                <suiteXmlFiles>
-                  <suiteXmlFile>${project.build.testOutputDirectory}/testng.xml</suiteXmlFile>
+                  <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                </suiteXmlFiles>
             </configuration>
          </plugin>
