RM-1633 (Recorded Version Configuration Action)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@82333 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -140,6 +140,7 @@ actions.add-to-hold=Add to Hold
 actions.remove-from-hold=Remove from Hold
 actions.file-hold-report=Generate Hold Report
 actions.move-dm-record=Move Record
+actions.recorded-version-config=Recorded Version Configuration
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
@@ -206,6 +207,8 @@ message.delete-hold.failure=Couldn't delete hold
 message.delete-hold.success=Hold deleted
 message.moveDmRecord.failure=Couldn't move record ''{0}''
 message.moveDmRecord.success=Record ''{0}'' successfully moved
+message.recordedVersionConfig.success=Recorded version configuration set successfully
+message.recordedVersionConfig.failure=Couldn't set recorded version configuration
 
 ## File Plan Status Indicators
 status.rm-accession=Accession Pending
