RM-1611 (RU: a few improvements of translation)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.2@83347 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-custom-metadata.get.properties
@@ -26,3 +26,5 @@ message.delete-failure=Couldn't delete custom property: {0}
 
 mandatory.true=True
 mandatory.false=False
+
+button.new.custom-metadata=New
