--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
    </modules>
 
    <properties>
-      <alfresco.base.version>5.0.a</alfresco.base.version>
+      <alfresco.base.version>5.0-BF-SNAPSHOT</alfresco.base.version>
 
       <!-- Database properties - default values to be overridden in settings.xml -->
       <db.driver>org.postgresql.Driver</db.driver>
