RM 2.3 now works against 5.0-BF-SNAPSHOT (Community and Enterprise)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@83493 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -95,6 +95,12 @@
             </plugins>
          </build>
       </profile>
+      <profile>
+         <id>enterprise</id>
+         <properties>
+            <webapp.id>share-enterprise</webapp.id>
+         </properties>
+      </profile>
    </profiles>
    <dependencies>
       <dependency>
@@ -105,7 +111,7 @@
       </dependency>
       <dependency>
          <groupId>org.alfresco</groupId>
-         <artifactId>share</artifactId>
+         <artifactId>${webapp.id}</artifactId>
          <version>${alfresco.base.version}</version>
          <type>war</type>
       </dependency>
