RM-1640 (Recorded Version History Indicator)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@83580 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -232,6 +232,9 @@ status.rm-scanned-record=Scanned Record
 status.rm-web-record=Web Record
 status.rm-is-record=Record
 status.rules=Folder has rules applied
+## Document Library Status Indicators
+status.rm-recorded-version-history-all-revisions=All revisions will be recorded
+status.rm-recorded-version-history-major-revisions=Only major revisions will be recorded
 # Exif
 status.exif=EXIF metadata available
 
