RM-1604 (View Rejected Record Information)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@84517 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -67,7 +67,7 @@ label.menu.custom=Custom Properties
 button.reject.record=Reject Record
 button.request-info=Request Information
 
-##Â Pop-up Messages
+## Pop-up Messages
 message.confirm.delete.title=Delete Confirmation
 message.confirm.delete=Are you sure you want to delete ''{0}''?
 message.confirm.destroy.title=Destroy Confirmation
@@ -87,6 +87,8 @@ message.request-info-success=Information requested successfully
 message.request-info-failure=An error occurred whilst requesting information
 message.confirm.delete-hold.title=Delete Hold
 message.confirm.delete-hold=Are you sure you want to delete ''{0}''?
+message.confirm.close-rejected-record.title=Confirm
+message.confirm.close-rejected-record=Are you sure you want to remove the rejected record warning?
 
 ## Admin Console
 message.admin-console-access-denied=You need additional permissions to access this page.
@@ -463,3 +465,7 @@ file-to.substitution.date.year.short.label=Short Year (e.g. 14)
 file-to.substitution.date.year.label=Year (e.g. 14)
 file-to.substitution.date.year.long.label=Long Year (e.g. 2014)
 file-to.substitution.date.year.week.label=Week of Year (e.g. 31)
+
+## Banner icon messages
+banner.rejected-record.info=See information about the rejected record
+banner.rejected-record.close=Remove the rejected warning recording
