RM-1755: Version Record Indicator and List Item Metadata
  * indicator shown in file plan for version records (icon to be updated)
  * version label shown in list information
  * normal version label pop-up disabled in the file plan



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@89254 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -234,6 +234,7 @@ status.rm-scanned-record=Scanned Record
 status.rm-web-record=Web Record
 status.rm-is-record=Record
 status.rules=Folder has rules applied
+status.rm-version-record=Version Record
 ## Document Library Status Indicators
 status.rm-recorded-version-history-all-revisions=All revisions will be recorded
 status.rm-recorded-version-history-major-revisions=Only major revisions will be recorded
@@ -361,6 +362,7 @@ details.record.date-filed=Date Filed
 details.record.publication-date=Publication Date
 details.record.originator=Originator
 details.record.originating-organization=Originating Organization
+details.version.label=Version
 # Incomplete Record
 details.undeclared-record.info=Incomplete Record
 # Transfer Container
