RM-1762: Update version and dependency for 2.3.b release
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3.COMMUNITY@89350 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/module/org_alfresco_module_rm_share/module.properties
+++ b/rm-share/config/alfresco/module/org_alfresco_module_rm_share/module.properties
@@ -4,8 +4,8 @@ module.id=org_alfresco_module_rm_share
 # 28/02/2012 - Renamed
 module.aliases=org_alfresco_module_dod5015_share
 
-module.title=Alfresco Record Management Share Extension
+module.title=Alfresco Record Management Share Extension (2.3.b)
 module.description=Alfresco Record Management Share Extension
 module.version=2.3
 
-module.repo.version.min=4.2.2
+module.repo.version.min=5.0
