--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
    <groupId>org.alfresco</groupId>
    <artifactId>alfresco-rm-parent</artifactId>
    <packaging>pom</packaging>
-   <version>2.3-SNAPSHOT</version>
+   <version>2.3.b</version>
    <name>Alfresco Records Management</name>
 
    <url>http://www.alfresco.org/</url>
@@ -66,7 +66,7 @@
    </modules>
 
    <properties>
-      <alfresco.base.version>5.0.b-SNAPSHOT</alfresco.base.version>
+      <alfresco.base.version>5.0.b</alfresco.base.version>
 
       <!-- Database properties - default values to be overridden in settings.xml -->
       <db.driver>org.postgresql.Driver</db.driver>
