RM-1754 (Show Version Record Metadata)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@90150 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -35,6 +35,7 @@ label.set.security=Security
 label.set.vitalRecord=Vital Record
 label.set.disposition=Disposition Schedule
 label.set.customMetadata=Custom Properties
+label.set.recordVersion=Record Version
 label.hold.reason=Reason
 label.hold.delete.empty=Delete Hold When Empty
 label.recordLevelDisposition=Applied to
@@ -54,6 +55,8 @@ label.storageLocation=Storage Location
 label.shelf=Shelf
 label.file=File
 label.box=Box
+label.versionDescription=Version Description
+label.VersionLabel=Version Label
 
 ## Common Property Selector
 label.menu.content=Content
