--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -368,6 +368,8 @@ details.record.originating-organization=Originating Organization
 details.version.label=Version
 # Incomplete Record
 details.undeclared-record.info=Incomplete Record
+# Rejected Record
+details.rejected-record.info=Rejected Record
 # Transfer Container
 details.transfer-container.title=Transfer {0}
 details.transfer-container.is-accession=<em>Note:</em> Transfer type is Accession
@@ -391,12 +393,6 @@ tip.insitu-tag=Tag
 
 ## Help panels, including Drag and Drop
 show.folders=Show {0} subfolder(s)
-
-details.undeclared-record.info=Incomplete Record
-details.rejected-record.info=Rejected Record
-details.record.identifier=Unique Record Identifier
-details.record.originator=Originator
-details.record.originating-organization=Originating Organization
 
 ## Create site dialog
 description.recordsManagementSite=Records Management Site
