RM-1764 (Simplified Relationship View)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@90978 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/relationships.get.properties
@@ -5,3 +5,7 @@ label.title.new-relationship=New Relationship
 label.button.select-record=Select Record
 label.button.create=Create
 label.button.cancel=Cancel
+label.alt.text.delete-relationship=Delete '{0}'
+label.confirmation.title.delete-relationship=Delete Relationship
+label.confirmationPrompt.delete-relationship=Are you sure you want to delete '{node.properties.cm:name}'?
+label.delete-relationship.successMessage=Successfully deleted '{node.properties.cm:name}'
