RM-1780 (Rename recorded version configuration)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@90983 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get.properties
@@ -1,5 +1,5 @@
-header=Recorded Version Configuration
-label.recorded-versions=Recorded Versions
-option.none.displayValue=None
-option.major_only.displayValue=Major Revisions Only
-option.all.displayValue=All Revisions
+header=Set Auto-Declare Versions Options
+label.recorded-versions=Automatically declare versions as records
+option.none.displayValue=Never
+option.major_only.displayValue=For major versions only
+option.all.displayValue=For all major and minor versions
