--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -145,7 +145,7 @@ actions.add-to-hold=Add to Hold
 actions.remove-from-hold=Remove from Hold
 actions.file-hold-report=Generate Hold Report
 actions.move-dm-record=Move Record
-actions.recorded-version-config=Recorded Version Configuration
+actions.recorded-version-config=Auto-declare Options
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
@@ -212,8 +212,8 @@ message.delete-hold.failure=Couldn't delete hold
 message.delete-hold.success=Hold deleted
 message.moveDmRecord.failure=Couldn't move record ''{0}''
 message.moveDmRecord.success=Record ''{0}'' successfully moved
-message.recordedVersionConfig.success=Recorded version configuration set successfully
-message.recordedVersionConfig.failure=Couldn't set recorded version configuration
+message.recordedVersionConfig.success=Auto-declare options set successfully
+message.recordedVersionConfig.failure=Couldn't set auto-declare options
 
 ## File Plan Status Indicators
 status.rm-accession=Accession Pending
