RM-1765 (Simplified Add Relationship Dialog)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@91090 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -59,6 +59,9 @@
                               <move todir="${project.build.directory}/${project.build.finalName}/web/rm">
                                  <fileset dir="${project.build.outputDirectory}/rm"/>
                               </move>
+                              <move todir="${project.build.directory}/${project.build.finalName}/web/js">
+                                 <fileset dir="${project.build.outputDirectory}/js"/>
+                              </move>
                               <move file="${project.build.directory}/${project.build.finalName}/config/alfresco/module/org_alfresco_module_rm_share/file-mapping.properties"
                                  todir="${project.build.directory}/${project.build.finalName}"/>
                               <move file="${project.build.directory}/${project.build.finalName}/config/alfresco/module/org_alfresco_module_rm_share/module.properties"
