Introduce Mockito unit tests into Share AMP project
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@91731 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/build.xml
+++ b/rm-share/build.xml
@@ -17,6 +17,10 @@
       </copy>
    </target>
 
-   <target name="unitTest"/>
+   <target name="unitTest">
+      <exec executable="${mvn.exec}" failonerror="true">
+	     <arg value="test" />
+	  </exec>
+   </target>
 
 </project>
