--- a/rm-share/pom.xml
+++ b/rm-share/pom.xml
@@ -23,6 +23,25 @@
             <directory>source/web</directory>
          </resource>
       </resources>
+      <plugins>
+      	<plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+               <execution>
+                  <id>add-test-source</id>
+                  <goals>
+                     <goal>add-test-source</goal>
+                  </goals>
+                  <configuration>
+                     <sources>
+                        <source>unit-test/java</source>
+                     </sources>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+      </plugins>
    </build>
    <profiles>
       <profile>
@@ -117,6 +136,19 @@
          <artifactId>${webapp.id}</artifactId>
          <version>${alfresco.base.version}</version>
          <type>war</type>
+      </dependency>
+      <!--  Test Dependencies -->
+      <dependency>
+         <groupId>junit</groupId>
+         <artifactId>junit</artifactId>
+         <version>4.11</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.mockito</groupId>
+         <artifactId>mockito-all</artifactId>
+         <version>1.9.5</version>
+         <scope>test</scope>
       </dependency>
    </dependencies>
 </project>
