--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/recorded-version-config.get.properties
@@ -1,4 +1,4 @@
-header=Set Auto-Declare Versions Options
+header=Set Auto-Declare Options
 label.recorded-versions=Automatically declare versions as records
 option.none.displayValue=Never
 option.major_only.displayValue=For major versions only
