RM-1541: Unlink Record
  * Unlink record UI action added
  * Unused DeleteLink capability repurposed as Unlink capability
  * UI evaluator ensuring unlink action only appears for linked record that are not in their primary location
  * evaluator unit test



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@91840 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -92,6 +92,8 @@ message.confirm.delete-hold.title=Delete Hold
 message.confirm.delete-hold=Are you sure you want to delete ''{0}''?
 message.confirm.close-rejected-record.title=Confirm
 message.confirm.close-rejected-record=Are you sure you want to remove the rejected record warning?
+message.confirm.unlink.title=Unlink Confirmation
+message.confirm.unlink.text=Are you sure you want to unlink the record?
 
 ## Admin Console
 message.admin-console-access-denied=You need additional permissions to access this page.
@@ -117,6 +119,7 @@ actions.edit-reason=Edit Hold Details
 actions.edit-review-as-of-date=Edit Review Date
 actions.file-report=File Report
 actions.link-to=Link to...
+actions.unlink-from=Unlink Record
 actions.file-to=File to...
 actions.manage-permissions=Manage Permissions
 actions.move-to=Move to...
@@ -214,6 +217,8 @@ message.moveDmRecord.failure=Couldn't move record ''{0}''
 message.moveDmRecord.success=Record ''{0}'' successfully moved
 message.recordedVersionConfig.success=Auto-declare options set successfully
 message.recordedVersionConfig.failure=Couldn't set auto-declare options
+message.unlink.success=Record successfully unlinked
+message.unlink.failure=Couldn't unlink record
 
 ## File Plan Status Indicators
 status.rm-accession=Accession Pending
