--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -149,6 +149,7 @@ actions.remove-from-hold=Remove from Hold
 actions.file-hold-report=Generate Hold Report
 actions.move-dm-record=Move Record
 actions.recorded-version-config=Auto-Declare Options
+actions.add-relationship=Add relationship
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
