RM-1772: Declare As Record Version
  * creates new version and declares as record version
  * available via rule UI
  * todo unit/integration tests 
  * includes fix for RM-1810 (Hide InPlace Record action is not available for use in a rule)



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@92350 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -137,6 +137,7 @@ actions.upload-new-version=Upload New Version
 actions.view-details=View Details
 actions.view-audit-log=View Audit Log
 actions.create-record=Declare as Record
+actions.declare-as-version-record=Declare as Version Record
 actions.hide-record=Hide Record
 actions.reject=Reject
 actions.request-info=Request Information
