--- a/rm-share/config/alfresco/module/org_alfresco_module_rm_share/module.properties
+++ b/rm-share/config/alfresco/module/org_alfresco_module_rm_share/module.properties
@@ -4,7 +4,7 @@ module.id=org_alfresco_module_rm_share
 # 28/02/2012 - Renamed
 module.aliases=org_alfresco_module_dod5015_share
 
-module.title=Alfresco Record Management Share Extension (2.3.b)
+module.title=Alfresco Record Management Share Extension (2.3.c)
 module.description=Alfresco Record Management Share Extension
 module.version=2.3
 
